[package]
name = "kontentum-client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8.2", features = [ "serde" ] }
chrono = { version = "0.4", features = [ "serde" ] }
url = { version = "2.2", features = ["serde"] }

serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"

log = "0.4"

actix-web = { version = "3", features = ["rustls"] }

kontentum-core = { path = "../kontentum-core" }
